[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/Banana.gd" type="Script" id=1]
[ext_resource path="res://sprites/bananaSprite.png" type="Texture" id=2]
[ext_resource path="res://sounds/item bom (1).wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.5, 37 )

[node name="Banana" type="Area2D"]
position = Vector2( 527, 211 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 19.5, -16 )
shape = SubResource( 1 )

[node name="BananaSprite" type="Sprite" parent="."]
position = Vector2( -171, 97 )
scale = Vector2( 0.6551, 0.6551 )
texture = ExtResource( 2 )

[node name="CollectedSoundGood" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 10, -7 )
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Banana_body_entered"]
